Paranna pakan sekoitusta, ota kortti pakan lopusta ja lisää kortti Long.valueOf() metodilla, joka on Sonarin mukaan ~3.5x nopeampi